# myemerge

./: .gitignore  MANIFEST.in  NEW_RELEASE.md  README.md  emerge.sync  myemerge.epj  pyproject.toml  setup.py
locale/: es.po  fr.po  myemerge.pot
myemerge/: NEW_RELEASE.md  __init__.py  emerge.sync.rebuildsystem  gettext.py  myemerge_sync.py  myemerge_sync_rebuildsystem.py  poethepoet.py  version.py
myemerge/locale/: es.po  fr.po  myemerge.pot
myemerge/locale/es/LC_MESSAGES/: myemerge.mo
myemerge/locale/fr/LC_MESSAGES/: myemerge.mo
myemerge/reusing/: casts.py  myconfigparser.py
