[project]
name = "myemerge"
version = "1.0.0"
description = "My emerge sync procedure"
authors = [
    {name = "turulomio",email = "turulomio@yahoo.es"}
]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "pycryptodome (>=3.22.0,<4.0.0)",
    "colorama (>=0.4.6,<0.5.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
poetry = "^2.1.2"
poethepoet = "^0.33.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
homepage = "https://github.com/turulomio/myemerge/"
repository = "https://github.com/turulomio/myemerge/"
changelog = "https://github.com/turulomio/myemerge#changelog"

[tool.poetry.scripts]
myemerge = 'myemerge.myemerge_sync:main'


[tool.poe.tasks]
translate = { script = "myemerge.poethepoet:translate" }
release = { script = "myemerge.poethepoet:release" }
reusing = { script = "myemerge.poethepoet:reusing" }
